--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "prettier": "2.4.1"
   },
   "lint-staged": {
-    "*.{yml,md,js,json}": ["prettier --write --config .prettierrc.js"]
+    "*.{yml,md,js,json}": [
+      "prettier --write --config .prettierrc.js"
+    ]
   }
 }
